# clippy-share

./: .gitignore  Architecture.txt  Cargo.toml  README.md  basic context.txt
cli/: Cargo.toml
cli/src/: main.rs
core-daemon/: Cargo.toml
core-daemon/src/: lib.rs
crypto-engine/src/: lib.rs
desktop-ui/: Cargo.toml
net/src/: lib.rs
platform-adapters/: Cargo.toml
platform-adapters/src/: android.rs  lib.rs  windows.rs  x11.rs
platform-adapters/src/android/: mod.rs
platform-adapters/src/wayland/: gtk_clipboard.rs  mod.rs  portal.rs  wlr_data_control.rs  wlroots.rs
platform-adapters/src/windows/: mod.rs
platform-adapters/src/x11/: mod.rs
